--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <tr>
                         <th scope="col">Train Name</th>
                         <th scope="col">Destination</th>
-                        <th scope="col">Frequency (min)</th>
+                        <th scope="col">First Departure</th>
                         <th scope="col">Next Arrival (min)</th>
                         <th scope="col">Minutes Away</th>
                         </tr>
@@ -73,6 +73,7 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="assets/javascript/app.js"></script>
     
     
